added a dockerfile